2012-07-01  WOnder93  <omosnacek@gmail.com>

	* BufferedOutputStream.cs:
	  Close the underlying stream when disposing.

	* TcpConnection.cs:
	  Close the socket properly when the connection is killed.

	* AssemblyInfo.cs:
	  Updated the assembly version.

2012-06-22  WOnder93  <omosnacek@gmail.com>

	* TcpConnection.cs:
	* BufferedOutputStream.cs:
	* System.Runtime.Remoting.Channels.TwoWayTcp.csproj:
	  Fixed very ineffective networking in TCP channels.

	* AssemblyInfo.cs:
	  Updated the assembly version.

2012-06-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  Updated the assembly version.

	* TcpConnectionPool.cs:
	  Handle exceptions in TcpConnection.FireMessage.

	* TcpConnection.cs:
	  Do not expect NetworkStream to read all bytes - fixes
	  connection crashes on slower connections.
	Handle exceptions in TcpConnection.FireMessage.

2012-06-12  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  Updated copyright years.

2012-06-11  WOnder93  <omosnacek@gmail.com>

	* System.Runtime.Remoting.Channels.TwoWayTcp.csproj:
	  An automatic project file fix.

2012-06-11  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* TcpClientChannel.cs:
	  Removed the TcpConnectionPool.PurgeConnections() method.

	* TcpConnectionPool.cs:
	  Removed the TcpConnectionPool.PurgeConnections() method.
	Renamed the delegate types.

	* TcpClientSinkProvider.cs:
	  Added an OnDisconnected event handler so that disconnected
	  sinks can be removed from cache and finalized.

	* TcpServerChannel.cs:
	  Removed the TcpConnectionPool.PurgeConnections() method.
	Improved the TcpServerChannel.StartListening() method so that
	  it can be called again after calling StopListening().
	Added handling of SocketExceptions during stopping the
	  listener.

	* TcpConnection.cs:
	  Added an OnDisconnected event handler so that disconnected
	  sinks can be removed from cache and finalized.
	Renamed the delegate types.

2012-03-18  WOnder93  <omosnacek@gmail.com>
